got tree to prettify, need to fix none wrapping strings

--- a/public/app.css
+++ b/public/app.css
@@ -16,7 +16,7 @@
   border: 1px solid greenyellow;
   position: absolute;
   z-index: 1;
-  background-color: ##FFB6C1;
+  background-color: #FFB6C1;
 
 }
 
